# titiler-xarray

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  smaller-chunks.ipynb  test_factory.py  testing-netcdf.py
.github/workflows/: branch-deploy.yml  branchdeploy.yml  ci.yml  deploy-development.yml
benchmarks/: profiler.py  profiling.ipynb
fixtures/: generate_test_nc4s.py  generate_test_store.py  generate_test_zarr.py  observation_2.nc  power_901_monthly_meteorology_utc_WS50M_info.json  reference.json
fixtures/cmip6.zarr/: .zmetadata
fixtures/power_901_monthly_meteorology_utc.zarr/: .zmetadata
fixtures/responses/: noaa_oisst_sst_info.json  noaa_oisst_sst_tilejson.json  power_901_monthly_meteorology_utc_WS50M_tilejson.json  reference_info.json  refernce_tilejson.json  test_CDD0_info.json  test_CDD0_tilejson.json
fixtures/test_zarr_store.zarr/: .zmetadata
fixtures/test_zarr_store.zarr/CDD0/: 0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
fixtures/test_zarr_store.zarr/DISPH/: .zarray  0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
fixtures/test_zarr_store.zarr/FROST_DAYS/: 0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
fixtures/test_zarr_store.zarr/GWETPROF/: 0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  (+15 more)
fixtures/test_zarr_store_misordered_coords.zarr/: .zmetadata
infrastructure/aws/: package-lock.json  package.json  requirements-cdk.txt
my_cache_directory/: cache.db
stack/: app.py  config.py  example.env
stack/lambda/: Dockerfile  handler.py
tests/: conftest.py  helpers.py  test_app.py  test_remote.py
tests/fixtures/: 3B42_Daily.19980101.7.nc4  generate_test_netcdf.py  generate_test_pyramid.py  generate_test_reference.py  generate_test_zarr.py  generate_test_zarr_unconsolidated.py  observation_1.nc
titiler/xarray/: __init__.py  factory.py  main.py  map-form.html  map.html  middleware.py  reader.py  redis_pool.py  settings.py
(+10 files in other folders)
